Placed the main.css in dist/css as the prepos didn't

--- a/prepros.config
+++ b/prepros.config
@@ -509,7 +509,7 @@
           "segments": [
             {
               "segment": "scss",
-              "replaceWith": ".././dist/css"
+              "replaceWith": "./dist/css"
             },
             {
               "segment": "sass",
