Some improvements in the code and adding error and confirm files

--- a/prepros.config
+++ b/prepros.config
@@ -505,17 +505,18 @@
         ],
         "output": {
           "extension": ".css",
-          "type": "REPLACE_SEGMENTS",
+          "type": "SOURCE_RELATIVE",
           "segments": [
             {
               "segment": "scss",
-              "replaceWith": "./dist/css"
+              "replaceWith": "../../dist/css"
             },
             {
               "segment": "sass",
               "replaceWith": "css"
             }
-          ]
+          ],
+          "relativePath": "../dist/css"
         }
       },
       "less": {
